# linux_gateway

./: .gitignore  Cargo.toml  Cargo.toml.bak  Cargo.toml.bak.1757452157  README.md  README.md.bak.1757463590  build.rs  ci_audit.sh  deny.toml  file  platformio.ini  project_check.sh
.github/: ci-seed.txt
afl-harness/: Cargo.toml
afl_corpus_min/: 00-req-ok  01-resp-ok
ci/: renode_smoke.sh
docs/: otel_mvp.md
examples/: decode_req.rs  decode_resp.rs  gen_seeds.rs  peek.rs  trace_demo.rs
fuzz/: Cargo.toml  calc.dict
fuzz/.github/workflows/: ci.yml
fuzz/dict/: calc.dict
fuzz/fuzz/fuzz/dictionaries/: recommended.dict
fuzz/fuzz_targets/: decode_req.rs  frame_decode.rs
fuzz/seeds/: bad_crc.hex  good.hex  random.hex  req_7_35.hex  req_big.hex  resp_42.hex  seed.txt  trunc.hex
include/: trace_ctx.h
proto/: calc.options  calc.proto  nanopb.options
r5/: Makefile  calc.pb-c.c  calc.pb-c.h  calc_service.c  calc_service.h  echo.c  echo_calc.c  frame_decode.c  frame_decode.h  host-smoke  host_roundtrip.c  otel_timings.h  regen_nanopb.sh  trace_util.h
r5/firmware/: CMakeLists.txt
r5/firmware/src/: calc_handler.c
renode/: smoke.resc
rpmsg_trace/: otel_timings.h  time_us.c
scripts/: afl_decode.sh  ci-stats.sh  gen_r5_proto.sh  run-ci-summary.sh  trace_roundtrip_smoke.sh
src/: codec.rs  lib.rs  lib.rs.bak.1757261512  lib.rs.bak.1757265989  lib.rs.bak.1757271062  lib.rs.bak.1757272331  lib.rs.bak.1757272806  lib.rs.bak.1757273069  lib.rs.bak.1757284138  lib.rs.bak.1757284408  lib.rs.bak.1757284547  lib.rs.bak.1757284670  lib.rs.bak.1757284768  lib.rs.bak.1757285360  lib.rs.bak.1757285591  lib.rs.bak.1757285722  lib.rs.bak.1757285998  lib.rs.bak.1757286329  lib.rs.bak.1757287488  lib.rs.bak.1757288067  lib.rs.bak.1757288968  lib.rs.bak.1757289342  lib.rs.bak.1757289535  lib.rs.bak.1757289720  lib.rs.bak.1757290294  lib.rs.bak.1757291701  lib.rs.bak.1757292179  lib.rs.bak.1757292689  lib.rs.bak.1757298544  lib.rs.bak.1757298749  lib.rs.bak.1757299068  lib.rs.bak.1757483953  lib.rs.before-trace-fix.1757341918  main.cpp  main.rs  main.rs.bak  main.rs.bak.1757455780  main.rs.bak.1757479585  main.rs.bak.1757479711  main.rs.bak.1757479816  (+23 more)
(+35 files in other folders)
